--- a/blog-post-horizontalusing.html
+++ b/blog-post-horizontalusing.html
@@ -46,11 +46,11 @@
     <!-- Navigation -->
     <nav id="main-menu">
         <ul class="nav nav-horizontal">
-            <li><a href="index-it-horizontalusing.html#start"><span>Start</span></a></li>
-            <li><a href="index-it-horizontalusing.html#resume"><span>Resume</span></a></li>
-            <li><a href="index-it-horizontalusing.html#portfolio"><span>Portfolio</span></a></li>
-            <li><a href="index-it-horizontalusing.html#posts"><span>Latest Posts</span></a></li>
-            <li><a href="index-it-horizontalusing.html#contact"><span>Contact</span></a></li>
+            <li><a href="index.html#start"><span>Start</span></a></li>
+            <li><a href="index.html#resume"><span>Resume</span></a></li>
+            <li><a href="index.html#portfolio"><span>Portfolio</span></a></li>
+            <li><a href="index.html#posts"><span>Latest Posts</span></a></li>
+            <li><a href="index.html#contact"><span>Contact</span></a></li>
             
         </ul>
     </nav>
