--- a/index.html
+++ b/index.html
@@ -292,6 +292,18 @@
                         </div>
                     </div>
                 </div>
+                <div class="webdesign masonry-item margin-b-30 col-lg-6 col-sm-6 col-xs-12">
+                    <div class="gallery-item">
+                        <div class="item-photo">
+                            <a href="https://obscure-plains-98950.herokuapp.com/" data-target="ajax-modal"><img src="assets/img/photos/Burger.png" alt="BURGER"/></a>
+                            <div class="item-hover bg-dark dark">
+                            </div>
+                        </div>
+                        <div class="item-title">
+                            <a href="https://obscure-plains-98950.herokuapp.com//" class="title">EAT THE BURGER</a>
+                        </div>
+                    </div>
+                </div>
                 <!-- Masonry Element -->
                 <div class="development masonry-item margin-b-30 col-lg-3 col-sm-6 col-xs-12">
                     <div class="gallery-item">
