--- a/index.html
+++ b/index.html
@@ -283,6 +283,18 @@
                 <div class="webdesign masonry-item margin-b-30 col-lg-6 col-sm-6 col-xs-12">
                     <div class="gallery-item">
                         <div class="item-photo">
+                            <a href="https://suzannaudra.github.io/ClickGame/" data-target="ajax-modal"><img src="assets/img/photos/NaturesGame.png" alt="NatureCards"/></a>
+                            <div class="item-hover bg-dark dark">
+                            </div>
+                        </div>
+                        <div class="item-title">
+                            <a href="https://suzannaudra.github.io/ClickGame/" class="title">Nature's Click Game</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="webdesign masonry-item margin-b-30 col-lg-6 col-sm-6 col-xs-12">
+                    <div class="gallery-item">
+                        <div class="item-photo">
                             <a href="https://suzannaudra.github.io/GIFY-Cartoon-Search/" data-target="ajax-modal"><img src="assets/img/photos/GIPHY.png" alt="GIPHY"/></a>
                             <div class="item-hover bg-dark dark">
                             </div>
