added updated Resume

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="container container-wide v-bottom padding-v-80">
             <h1 class="text-lg margin-b-0">Hi! I’m <strong>Suzann Kowalski</strong></h1>
             <h5 class="text-tertiary margin-b-40">experienced Office Manager and Logistics Guru</h5>
-            <a href="assets/img/photos/Resume1.pdf" class="btn btn-link"><span>Download my CV</span><i class="ti-file"></i></a>
+            <a href="assets/img/photos/Suzann Kowalski Resume 2020.pdf" class="btn btn-link"><span>Download my CV</span><i class="ti-file"></i></a>
         </div>
         
     </section>
