--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="resume-box">
                         <span class="icon animated" data-animation="fadeInDown"><i class="ti-comment-alt text-tertiary"></i></span>
                         <h4><strong>About</strong> Me</h4>
-                        <p class="lead">I decided to start coding to gain a new skill to advance my career. Creativity is in my blood and learning how to create with technology has been challenging but enjoyable. During my free time, you can find me at yoga, working on a painting, or outside exploring nature. I play the keyboard. I like to dissect popular songs and play them using chords and bass notes so I can sing along. I enjoy skateboarding, photography, and cooking culinary masterpieces in the kitchen. When I get the opportunity I love to travel. I am a true believer in positive energy and that with the right mindset you can truly achieve anything. I'm currently living in Oakland, CA.</p>   
+                        <p class="lead">I decided to start coding to gain a new skill to advance my career. Creativity is in my blood and learning how to create with technology has been challenging but enjoyable. During my free time, you can find me at yoga, working on a painting, or outside exploring nature. I am a true believer in positive energy and that with the right mindset you can truly achieve anything. I'm currently living in Oakland, CA.</p>   
                     </div>
 
                     <!-- Resume Box / Skills -->
