changed about me

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="resume-box">
                         <span class="icon animated" data-animation="fadeInDown"><i class="ti-comment-alt text-tertiary"></i></span>
                         <h4><strong>About</strong> Me</h4>
-                        <p class="lead">I decided to start coding to gain a new skill to advance my career. Creativity is in my blood and learning how to create with technology has been challenging but enjoyable. During my free time, you can find me at yoga, working on a painting, or outside exploring nature. I am a true believer in positive energy and that with the right mindset you can truly achieve anything. I'm currently living in Oakland, CA.</p>   
+                        <p class="lead">I decided to start coding to gain a new skill to advance my career. Creativity is in my blood and learning how to create with technology has been challenging but enjoyable. I have experience in office aministration as well as leading office and warehouse teams. I am a true believer in positive energy and that with the right mindset you can truly achieve anything. I'm currently living in Oakland, CA.</p>   
                     </div>
 
                     <!-- Resume Box / Skills -->
