--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <!-- Middle -->
         <div class="container container-wide v-bottom padding-v-80">
             <h1 class="text-lg margin-b-0">Hi! I’m <strong>Suzann Kowalski</strong></h1>
-            <h5 class="text-tertiary margin-b-40">experienced Office Manager and Logistics Guru</h5>
+            <h5 class="text-tertiary margin-b-40">Up and coming Full Stack Web Developer</h5>
             <a href="assets/img/photos/Suzann Kowalski Resume 2020.pdf" class="btn btn-link"><span>Download my CV</span><i class="ti-file"></i></a>
         </div>
         
@@ -107,38 +107,18 @@
                         <h4><strong>Skills</strong> &amp; abilities</h4>
                         <!-- Skill -->
                         <div class="skill">
-                            <div class="progress progress-animated">
-                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                                    <span></span>
-                                </div>
-                            </div>
                             <strong>HTML5</strong>
                         </div>
                         <!-- Skill -->
                         <div class="skill">
-                            <div class="progress progress-animated">
-                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-                                    <span></span>
-                                </div>
-                            </div>
                             <strong>CSS3</strong>
                         </div>
                         <!-- Skill -->
                         <div class="skill">
-                            <div class="progress progress-animated">
-                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-                                    <span></span>
-                                </div>
-                            </div>
                             <strong>JavaScript / jQuery</strong>
                         </div>
                         <!-- Skill -->
                         <div class="skill">
-                            <div class="progress progress-animated">
-                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                                    <span></span>
-                                </div>
-                            </div>
                             <strong>Microsoft Office Suite</strong>
                         </div>
                     </div>
