--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
     <!-- Navigation -->
     <nav id="main-menu">
         <ul class="nav nav-horizontal">
-            <li><a href="#start"><span>Start</span></a></li>
             <li><a href="#resume"><span>Resume</span></a></li>
             <li><a href="#portfolio"><span>Portfolio</span></a></li>
             <li><a href="#posts"><span>Latest Posts</span></a></li>
@@ -222,15 +221,6 @@
 
             <h6 class="margin-b-50">Portfolio</h6>
 
-            <!-- Filters -->
-            <nav class="text-center">
-                <ul class="nav nav-filter nav-pills margin-b-40" data-filter-grid="#portfolio-list">
-                    <li class="active"><a href="#" data-filter="*">All</a></li>
-                    <li><a href="#" data-filter=".webdesign">Webdesign</a></li>
-                    <li><a href="#" data-filter=".development">Development</a></li>
-                    <li><a href="#" data-filter=".graphic">Graphic Design</a></li>
-                </ul>
-            </nav>
             
             <div id="portfolio-list" class="row masonry">
                 <!-- Masonry Sizer -->
@@ -258,23 +248,14 @@
                         </div>
                         <div class="item-title">
                             <a href="https://suzannaudra.github.io/GIFY-Cartoon-Search/" class="title">GIPHY</a>
+                            <p>A cartoon app to search fo GiFs</p>
+                            <a href="https://github.com/suzannaudra/GIFY-Cartoon-Search">Github</a>
                         </div>
                     </div>
                 </div>
-                <div class="webdesign masonry-item margin-b-30 col-lg-6 col-sm-6 col-xs-12">
-                    <div class="gallery-item">
-                        <div class="item-photo">
-                            <a href="https://obscure-plains-98950.herokuapp.com/" data-target="ajax-modal"><img src="assets/img/photos/Burger.png" alt="BURGER"/></a>
-                            <div class="item-hover bg-dark dark">
-                            </div>
-                        </div>
-                        <div class="item-title">
-                            <a href="https://obscure-plains-98950.herokuapp.com//" class="title">EAT THE BURGER</a>
-                        </div>
-                    </div>
-                </div>
+                
                 <!-- Masonry Element -->
-                <div class="development masonry-item margin-b-30 col-lg-3 col-sm-6 col-xs-12">
+                <div class="webdesign masonry-item margin-b-30 col-lg-6 col-sm-6 col-xs-12">
                     <div class="gallery-item">
                         <div class="item-photo">
                             <a href="https://suzannaudra.github.io/TrainSchedule/" data-target="ajax-modal"><img src="assets/img/photos/TrainTimer.png" alt="TrainTimer" /></a>
@@ -286,7 +267,7 @@
                     </div>
                 </div>
                 <!-- Masonry Element -->
-                <div class="graphic masonry-item margin-b-30 col-lg-3 col-sm-6 col-xs-12">
+                <div class="webdesign masonry-item margin-b-30 col-lg-6 col-sm-6 col-xs-12">
                     <div class="gallery-item">
                         <div class="item-photo">
                             <a href="https://suzannaudra.github.io/Voyage/" data-target="ajax-modal"><img src="assets/img/photos/VOYAGE.png" alt="Voyage" /></a>
@@ -297,18 +278,7 @@
                     </div>
                 </div>
                 <!-- Masonry Element -->
-                <div class="webdesign masonry-item margin-b-30 col-lg-3 col-sm-6 col-xs-12">
-                    <div class="gallery-item">
-                        <div class="item-photo">
-                            <a href="https://github.com/suzannaudra" data-target="ajax-modal"><img src="assets/img/photos/Github.png" alt="Correlation VS Causation" /></a>
-                        </div>
-                        <div class="item-title">
-                            <a href="https://github.com/suzannaudra" class="title">Github Repo</a>
-                        </div>
-                    </div>
-                </div>
-                <!-- Masonry Element -->
-                <div class="development masonry-item margin-b-30 col-lg-6 col-sm-6 col-xs-12">
+                <div class="webdesign masonry-item margin-b-30 col-lg-6 col-sm-6 col-xs-12">
                         <div class="gallery-item">
                             <div class="item-photo">
                                 <a href="https://gentle-beach-66776.herokuapp.com/" data-target="ajax-modal"><img src="assets/img/photos/CVSC.png" alt="Correlation VS Causation" /></a>
@@ -319,13 +289,13 @@
                         </div>
                 </div>
                 <!-- Masonry Element -->
-                <div class="development masonry-item margin-b-30 col-lg-4 col-sm-6 col-xs-12">
+                <div class="webdesign masonry-item margin-b-30 col-lg-6 col-sm-6 col-xs-12">
                         <div class="gallery-item">
                             <div class="item-photo">
-                                <a href="https://powerful-forest-78168.herokuapp.com/survey" data-target="ajax-modal"><img src="assets/img/photos/Friends.png" alt="Friend Finder" /></a>
+                                <a href="https://toytrader.herokuapp.com/toys" data-target="ajax-modal"><img src="assets/img/photos/Toys.png" alt="Toy Trader" /></a>
                             </div>
                             <div class="item-title">
-                                <a href="https://powerful-forest-78168.herokuapp.com/survey/" class="title">Friend Finder</a>
+                                <a href="https://toytrader.herokuapp.com/toys" class="title">Toy Trader</a>
                             </div>
                         </div>
                 </div>
@@ -380,6 +350,7 @@
         <!-- Contact Box -->
         <div class="contact-box bg-secondary dark animated" data-animation="flipInY">
             <h1>Don’t hesitate to <strong>contact me</strong>!</h1>
+            <h3>suzannaudra@gmail.com</h3>
             <!-- Contact List -->
             <ul class="list-unstyled list-unstyled-icons">
                 <li><i class="inline-icon icon-before-and-after text-primary fa fa-map-marker"></i>Oakland,<br />CA, 94609 USA</li>
