modified project summaries

--- a/index.html
+++ b/index.html
@@ -236,6 +236,8 @@
                         </div>
                         <div class="item-title">
                             <a href="https://suzannaudra.github.io/ClickGame/" class="title">Nature's Click Game</a>
+                            <p>This is a memory game, built using React, don't click the same tile twice.</p>
+                            <a href="https://github.com/suzannaudra/ClickGame">github</a>
                         </div>
                     </div>
                 </div>
@@ -249,7 +251,7 @@
                         <div class="item-title">
                             <a href="https://suzannaudra.github.io/GIFY-Cartoon-Search/" class="title">GIPHY</a>
                             <p>A cartoon app to search fo GiFs</p>
-                            <a href="https://github.com/suzannaudra/GIFY-Cartoon-Search">Github</a>
+                            <a href="https://github.com/suzannaudra/GIFY-Cartoon-Search">github</a>
                         </div>
                     </div>
                 </div>
@@ -262,7 +264,8 @@
                         </div>
                         <div class="item-title">
                             <a href="https://suzannaudra.github.io/TrainSchedule/" class="title">Train Schedule</a>
-                            
+                            <p>This is a Train schedule that uses Firebase API.</p>
+                            <a href="https://github.com/suzannaudra/TrainSchedule">github</a>   
                         </div>
                     </div>
                 </div>
@@ -274,6 +277,8 @@
                         </div>
                         <div class="item-title">
                             <a href="https://suzannaudra.github.io/Voyage/" class="title">Voyage</a>
+                            <p>This application helps the user determine a travel destination.</p>
+                            <a href="https://github.com/suzannaudra/Voyage">github</a>
                         </div>
                     </div>
                 </div>
@@ -285,6 +290,8 @@
                             </div>
                             <div class="item-title">
                                 <a href="https://gentle-beach-66776.herokuapp.com/" class="title">Correlation VS Causation</a>
+                                <p>This is a fun application where users can vote.</p>
+                                <a href="https://github.com/suzannaudra/CVSC">github</a>
                             </div>
                         </div>
                 </div>
@@ -296,6 +303,8 @@
                             </div>
                             <div class="item-title">
                                 <a href="https://toytrader.herokuapp.com/toys" class="title">Toy Trader</a>
+                                <p>This was built using React, it allows users to post and trade old/new toys.</p>
+                                <a href="https://github.com/suzannaudra/ToyTrader">github</a>
                             </div>
                         </div>
                 </div>
