--- a/index.html
+++ b/index.html
@@ -119,6 +119,13 @@
                         <div class="skill">
                             <strong>Microsoft Office Suite</strong>
                         </div>
+                          <!-- Skill -->
+                          <div class="skill">
+                            <strong>API</strong>
+                        </div>  <!-- Skill -->
+                        <div class="skill">
+                            <strong>Responsive Design</strong>
+                        </div>
                     </div>
 
                 </div>
