--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="container container-wide v-bottom padding-v-80">
             <h1 class="text-lg margin-b-0">Hi! I’m <strong>Suzann Kowalski</strong></h1>
             <h5 class="text-tertiary margin-b-40">Up and coming Full Stack Web Developer</h5>
-            <a href="assets/img/photos/Coding REsume.pdf" class="btn btn-link"><span>Download my CV</span><i class="ti-file"></i></a>
+            <a href="assets/img/photos/Suzann Kowalski Coding Resume (1).pdf" class="btn btn-link"><span>Download my CV</span><i class="ti-file"></i></a>
         </div>
         
     </section>
