--- a/index.html
+++ b/index.html
@@ -306,10 +306,10 @@
                 <div class="webdesign masonry-item margin-b-30 col-lg-6 col-sm-6 col-xs-12">
                         <div class="gallery-item">
                             <div class="item-photo">
-                                <a href="https://toytrader.herokuapp.com/toys" data-target="ajax-modal"><img src="assets/img/photos/Toys.png" alt="Toy Trader" /></a>
+                                <a href="https://toytrader.herokuapp.com" data-target="ajax-modal"><img src="assets/img/photos/Toys.png" alt="Toy Trader" /></a>
                             </div>
                             <div class="item-title">
-                                <a href="https://toytrader.herokuapp.com/toys" class="title">Toy Trader</a>
+                                <a href="https://toytrader.herokuapp.com" class="title">Toy Trader</a>
                                 <p>This was built using React, it allows users to post and trade old/new toys.</p>
                                 <a href="https://github.com/suzannaudra/ToyTrader">github</a>
                             </div>
